crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_indent_equals.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box\n= Box"
---
nash::syntax

  × Expected `=` before the variants.
   ╭─[src/Main.nash:2:1]
 1 │ type box
 2 │ = Box
   · ─
   ╰────
  help: Separate the datatype name and variants with `=`.
