crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_indent_field.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected a constructor field name.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write a lowercase field name followed by `:` and its type.
