crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_indent_field_type.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a constructor field type.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add an indented type after `:`.
