crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type\tbox = Box"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:5]
 1 │ type    box = Box
   ·     ────
   ╰────
  help: Replace the tab with spaces.
