crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_variant_arg.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was partway through parsing a custom type, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see a type next. Try putting int or string for now?
